Regression: cycles not updated when off object types in "View object Types" menu #99151

Closed
opened 2022-06-24 22:55:04 +02:00 by Alexander · 8 comments

System Information
Operating system: Ubuntu 20.04
Graphics card: Geforce MX230

Blender Version
Broken: 3.2
Working: 2.93

Short description of error
viewport render not updated when object types in turned off from "View object Types" menu

Steps to Reproduce

  • Open default scene
  • Select cycles engine and switch to viewport rendering
  • Turn off mesh visibility from Object type visibility popup
    2022-06-24 23-51-23.mp4
**System Information** Operating system: Ubuntu 20.04 Graphics card: Geforce MX230 **Blender Version** Broken: 3.2 Working: 2.93 **Short description of error** viewport render not updated when object types in turned off from "View object Types" menu **Steps to Reproduce** - Open default scene - Select cycles engine and switch to viewport rendering - Turn off mesh visibility from `Object type visibility` popup [2022-06-24 23-51-23.mp4](https://archive.blender.org/developer/F13226339/2022-06-24_23-51-23.mp4)
Author

Added subscriber: @sanek2005

Added subscriber: @sanek2005
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Pratik Borhade changed title from cycles not updated when off object types in "View object Types" menu to Regression: cycles not updated when off object types in "View object Types" menu 2022-06-28 05:09:36 +02:00
Member

Regression so I'll raise the priority for now.

Regression so I'll raise the priority for now.

Added subscriber: @brecht

Added subscriber: @brecht

It's a regression from 2.93 -> 3.0 but not that critical.

It's a regression from 2.93 -> 3.0 but not that critical.

This issue was referenced by 3915f5300a

This issue was referenced by 3915f5300ad2d2a3c12a8bb67bb97f60160953e7
Lukas Stockner self-assigned this 2022-10-16 01:01:32 +02:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99151
No description provided.