Fix T99151: Cycles not updating on Object Type visibility change

Differential Revision: https://developer.blender.org/D16259